--- a/src/app/core/admin/dashboard/dashboard.page.html
+++ b/src/app/core/admin/dashboard/dashboard.page.html
@@ -29,12 +29,12 @@
         <ion-label>Profil</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/create-jalan">
+      <ion-tab-button href="/admin/create-jalan">
         <ion-icon name="receipt-outline"></ion-icon>
         <ion-label>Daftar</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="superadmin/aduan-list">
+      <ion-tab-button href="admin/statistic">
         <ion-icon name="analytics-outline"></ion-icon>
         <ion-label>Statistik</ion-label>
       </ion-tab-button>
