--- a/src/app/core/global/info/info.page.html
+++ b/src/app/core/global/info/info.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/dashboard" >
+      <ion-button href="/user/dashboard" >
         <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -39,7 +39,7 @@
           </ion-card>
           <br>
           <div class="ion-text-center">
-            <ion-button mode="ios" href="/create-aduan">
+            <ion-button mode="ios" href="/user/create-aduan">
               <ion-icon slot="start" name="create-outline"></ion-icon>
               Daftar Aduan
             </ion-button>
