--- a/src/app/core/superadmin/dashboard/dashboard.page.html
+++ b/src/app/core/superadmin/dashboard/dashboard.page.html
@@ -24,22 +24,22 @@
     <div #map id="map"></div>
 
     <ion-tab-bar slot="bottom" color-primary>
-      <ion-tab-button href="superadmin/profile">
+      <ion-tab-button href="/superadmin/profile">
         <ion-icon name="person-outline"></ion-icon>
         <ion-label>Profil</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/admin-management">
+      <ion-tab-button href="/superadmin/admin-management">
         <ion-icon name="receipt-outline"></ion-icon>
         <ion-label>Utama</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="superadmin/aduan-list">
+      <ion-tab-button href="superadmin/statistic">
         <ion-icon name="analytics-outline"></ion-icon>
         <ion-label>Statistik</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/admin/jalan-list">
+      <ion-tab-button href="/superadmin/jalan-list">
         <ion-icon name="megaphone-outline"></ion-icon>
         <ion-label>Hebahan</ion-label>
       </ion-tab-button>
