--- a/src/app/core/superadmin/profile/profile.page.html
+++ b/src/app/core/superadmin/profile/profile.page.html
@@ -57,12 +57,12 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="text"></ion-input>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number"></ion-input>
               </ion-item>
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="telefon" placeholder="No Telefon Bimbit" type="number"></ion-input>
+                <ion-input formControlName="telefon" placeholder="No Telefon" type="number"></ion-input>
               </ion-item>
             </div>
             <div class="input">
