--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -34,12 +34,12 @@
         <ion-label>Aduan</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/aduan-list">
+      <ion-tab-button href="/user/aduan-list">
         <ion-icon name="desktop-outline"></ion-icon>
         <ion-label>Status</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/user/jalan-list">
+      <ion-tab-button href="/user/hebahan">
         <ion-icon name="megaphone-outline"></ion-icon>
         <ion-label>Hebahan</ion-label>
       </ion-tab-button>
