--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -37,16 +37,6 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="organisasi" placeholder="Nama Organisasi" type="text"></ion-input>
-              </ion-item>
-            </div>
-            <div class="input">
-              <ion-item>
-                <ion-input formControlName="jawatan" placeholder="Nama Jawatan" type="text"></ion-input>
-              </ion-item>
-            </div>
-            <div class="input">
-              <ion-item>
                 <ion-select formControlName="doc_type" placeholder="Jenis Pengenalan" interface="action-sheet">
                   <ion-select-option value="NRIC">NRIC No</ion-select-option>
                   <ion-select-option value="PASS">Paspot No</ion-select-option>
@@ -62,7 +52,7 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="telefon" placeholder="No Telefon Bimbit" type="number"></ion-input>
+                <ion-input formControlName="telefon" placeholder="No Telefon" type="number"></ion-input>
               </ion-item>
             </div>
             <div class="input">
