--- a/src/app/core/user/upload-gambar/upload-gambar.page.html
+++ b/src/app/core/user/upload-gambar/upload-gambar.page.html
@@ -30,7 +30,7 @@
         <ion-input value="Ahmad Talib" read-only></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">No Telefon Bimbit</ion-label>
+        <ion-label position="stacked">No Telefon</ion-label>
         <ion-input value="+60123456789" read-only></ion-input>
       </ion-item>
     </div>
