--- a/src/app/auth/register/register-admin/register-admin.page.scss
+++ b/src/app/auth/register/register-admin/register-admin.page.scss
@@ -1,8 +1,8 @@
 ion-toolbar {
-  --background: transparent no-repeat fixed center;
+  --background: white no-repeat fixed center;
   --color: var(--ion-color-primary);
   position: absolute;
-  top: 5px;
+  padding-top: 5px;
 }
 
 ion-item {
@@ -23,7 +23,7 @@ ion-item {
 }
 
 .header {
-  margin-top: 100px;
+  margin-top: 70px;
 
   .avatar {
     width: 120px; //40vw
