--- a/src/app/auth/register/register-user/register-user.page.html
+++ b/src/app/auth/register/register-user/register-user.page.html
@@ -1,10 +1,10 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-button href="/dashboard">
         <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
@@ -15,8 +15,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div id="container" class="header">
-    <form [formGroup]="regUserForm">
+  <form [formGroup]="regUserForm" class="container">
+    <div id="container" class="header">
       <ion-grid fixed>
         <ion-row>
           <ion-col size="12">
@@ -37,12 +37,34 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="password"></ion-input>
+                <ion-select formControlName="doc_type" placeholder="Jenis Pengenalan" interface="action-sheet">
+                  <ion-select-option value="NRIC">NRIC No</ion-select-option>
+                  <ion-select-option value="PASS">Paspot No</ion-select-option>
+                  <ion-select-option value="COMP">No Syarikat</ion-select-option>
+                  <ion-select-option value="OTH">Lain-lain</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </div>
+            <div class="input2">
+              <ion-item>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number"></ion-input>
+              </ion-item>
+            </div>
+            <div class="input2">
+              <ion-item>
+                <ion-input formControlName="telefon" placeholder="No Telefon" type="number"></ion-input>
               </ion-item>
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="confirmpassword" placeholder="Sah Kata Laluan" type="password"></ion-input>
+                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="password" autocomplete="off">
+                </ion-input>
+              </ion-item>
+            </div>
+            <div class="input">
+              <ion-item>
+                <ion-input formControlName="confirmpassword" placeholder="Sah Kata Laluan" type="password"
+                  autocomplete="off"></ion-input>
               </ion-item>
             </div>
             <div *ngFor="let error of error_messages.confirmpassword">
@@ -55,41 +77,23 @@
               *ngIf="!regUserForm.get('confirmpassword').errors && regUserForm.hasError('passwordNotMatch') && (regUserForm.get('confirmpassword').dirty || regUserForm.get('confirmpassword').touched)">
               Sila masukkan kata laluan yang sama
             </div>
-            <div class="input2">
-              <ion-item>
-                <ion-input formControlName="telefon" placeholder="No Telefon Bimbit" type="number"></ion-input>
-              </ion-item>
-            </div>
-            <div class="input2">
-              <ion-item>
-                <ion-input formControlName="nric" placeholder="No Kad Pengenalan" type="text"></ion-input>
-              </ion-item>
-            </div>
-            <div class="input">
-              <ion-item>
-                <ion-select placeholder="Jenis Kad Pengenalan" interface="action-sheet">
-                  <ion-select-option value="new_nric">Baru</ion-select-option>
-                  <ion-select-option value="old_mric">Lama</ion-select-option>
-                </ion-select>
-              </ion-item>
-            </div>
           </ion-col>
         </ion-row>
       </ion-grid>
-      <div class="card-body">
-        <ion-grid fixed>
-          <ion-row>
-            <ion-col class="ion-text-center">
-              <ion-text color="primary">
-                <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
-              </ion-text>
-              <ion-button (click)="submitUser()" [disabled]="regUserForm.invalid" mode="ios" shape="round">
-                Daftar
-              </ion-button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </div>
-    </form>
-  </div>
+    </div>
+    <div class="card-body">
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text color="primary">
+              <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
+            </ion-text>
+            <ion-button (click)="submitUser()" [disabled]="regUserForm.invalid" mode="ios" shape="round">
+              Daftar
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </form>
 </ion-content>
