--- a/src/app/core/admin/create-jalan/create-jalan.page.html
+++ b/src/app/core/admin/create-jalan/create-jalan.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar mode="md">
     <ion-buttons slot="start">
-      <ion-button href="/user/dashboard">
+      <ion-button href="/admin/dashboard">
         <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -37,7 +37,7 @@
               </ion-item>
               <ion-label position="floating">Keterangan Jalan</ion-label>
               <ion-item color="light">
-                <ion-input formControlName="detail" type="text" placeholder="Nyatakan Keadaan Jalan"></ion-input>
+                <ion-textarea formControlName="detail" placeholder="Masukkan Keterangan..." type="text"></ion-textarea>
               </ion-item>
               <ion-label position="floating">Status</ion-label>
               <ion-item color="light">
@@ -57,6 +57,14 @@
                   </ion-item>
                 </ion-col>
               </ion-row>
+              <ion-label position="floating">Negeri</ion-label>
+              <ion-item color="light">
+                <ion-input formControlName="negeri" type="text" placeholder="Nyatakan Negeri"></ion-input>
+              </ion-item>
+              <ion-label position="floating">Daerah</ion-label>
+              <ion-item color="light">
+                <ion-input formControlName="daerah" type="text" placeholder="Nyatakan Daerah"></ion-input>
+              </ion-item>
               <ion-label position="floating">Pihak Bertanggungjawab</ion-label>
               <ion-item color="light">
                 <ion-input formControlName="response_party" type="text" placeholder="Nyatakan Pihak"></ion-input>
