--- a/src/app/core/admin/create-jalan/create-jalan.page.scss
+++ b/src/app/core/admin/create-jalan/create-jalan.page.scss
@@ -27,7 +27,8 @@ ion-toolbar {
 
 ion-label{
   color: var(--ion-color-primary);
-  padding-right: 5px;
+  margin-left: 10px;
+  font-weight: 500;
 }
 
 .btn-custom{
