--- a/src/app/core/admin/jalan-list/jalan-list.page.html
+++ b/src/app/core/admin/jalan-list/jalan-list.page.html
@@ -1,40 +1,46 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-button *ngIf="isSuperAdmin" href="/superadmin/dashboard">
+        <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
+      </ion-button>
+      <ion-button *ngIf="isAdmin" href="/admin/dashboard">
+        <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
+      </ion-button>
     </ion-buttons>
-    <ion-title>Senarai Jalan</ion-title>
+
+    <ion-title mode="ios">Hebahan Jalan</ion-title>
 
     <ion-buttons slot="end">
-      <ion-button href="/create-jalan">
-        <ion-icon slot="start" name="add"></ion-icon>
+      <ion-button (click)="logout()">
+        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
   <div id="container" class="background">
-    <ion-list>
-      <ion-card *ngFor="let jalan of jalans$|async" (click)="openDetailModal(jalan)" color="light">
-        <ion-grid fixed>
-          <ion-row>
-            <ion-col size="3">
-              <ion-thumbnail>
-                <img src="https://c8.alamy.com/comp/B3MXEK/broken-road-B3MXEK.jpg" alt="img" />
-              </ion-thumbnail>
-            </ion-col>
-            <ion-col size="9">
-              <ion-label>
-                <p>{{jalan.detail}}</p>
-                <ion-badge color="tertiary">{{jalan.status}}</ion-badge>
-              </ion-label>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-card>
-    </ion-list>
-  </div>
+    <ion-content class="transparent">
 
+      <ion-list>
+        <ion-card *ngFor="let jalan of jalans$|async" (click)="openDetailModal(jalan)" color="light">
+          <ion-grid fixed>
+            <ion-row>
+              <div class="badge"></div>
+              <ion-col size="12">
+                <ion-label>
+                  <ion-card-title>{{jalan.name}}</ion-card-title>
+                  <p>Status: {{jalan.status}}</p>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+
+            <span style="font-size: 10px; float: right;">Lihat Butiran ></span>
+          </ion-grid>
+        </ion-card>
+      </ion-list>
+
+    </ion-content>
+  </div>
 </ion-content>
