--- a/src/app/core/admin/profile/profile.page.html
+++ b/src/app/core/admin/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button defaultHref="/user/dashboard">
+      <ion-button href="/admin/dashboard">
         <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -57,12 +57,12 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="text"></ion-input>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number"></ion-input>
               </ion-item>
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="telefon" placeholder="No Telefon Bimbit" type="number"></ion-input>
+                <ion-input formControlName="telefon" placeholder="No Telefon" type="number"></ion-input>
               </ion-item>
             </div>
             <div class="input">
