--- a/src/app/core/global/alert/success/success.page.html
+++ b/src/app/core/global/alert/success/success.page.html
@@ -1,9 +1,39 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>success</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="closeModal()" color="light">
+        <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title color="light" mode="ios">{{title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content [fullscreen]="true">
+  <div class="background bg-custom">
+    <div class="content">
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="12">
+            <div class="ion-text-center">
+              <img src="../../../../../assets/img/berjaya.png" alt="Berjaya" height="130px">
+              <h1>BERJAYA</h1>
+            </div>
+            <br>
+            <br>
+            <ion-card>
+              <ion-card-content align="center">
+                <ion-text color="primary">
+                  <p>{{message}}</p>
+                </ion-text>
+              </ion-card-content>
+            </ion-card>
+            <ion-button size="medium" mode="ios" (click)="closeModal()" expand="block" shape="round" color="light">
+              Seterusnya
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </div>
 </ion-content>
