--- a/src/app/core/superadmin/list/superadmin-list/superadmin-list.page.html
+++ b/src/app/core/superadmin/list/superadmin-list/superadmin-list.page.html
@@ -28,7 +28,7 @@
             <ion-col size="9">
               <ion-card-content>
                 <ion-card-title>{{user.name}}</ion-card-title>
-                <span class="text-limit">{{user.name}}</span>
+                <span class="text-limit">{{user.organisasi}}</span>
               </ion-card-content>
             </ion-col>
             <ion-col size="3">
