--- a/src/app/core/user/create/create-aduan/create-aduan.page.html
+++ b/src/app/core/user/create/create-aduan/create-aduan.page.html
@@ -52,7 +52,7 @@
               </div>
               <br>
               <div padding>
-                <ion-button size="medium" [disabled]="aduanForm.invalid" (click)="submitAduan()" expand="block">
+                <ion-button color="success" size="medium" [disabled]="aduanForm.invalid" (click)="submitAduan()" expand="block">
                  Seterusnya</ion-button>
               </div>
             </ion-col>
