--- a/src/app/core/user/list/jalan-list/jalan-list.page.scss
+++ b/src/app/core/user/list/jalan-list/jalan-list.page.scss
@@ -7,10 +7,53 @@
 }
 
 ion-card {
-  border-radius: 10px;
+  border-radius: 20px;
+  background: white;
+  margin-top: 0;
+  padding: 5px;
+  color: var(--ion-color-primary);
 
+  ion-card-title {
+    color: var(--ion-color-primary);
+    font-size: medium;
+  }
 }
 
 ion-list {
   background-color: transparent;
+  margin: 10px 20px 10px;
+}
+
+.text-limit {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  color: whitesmoke
+}
+
+ion-toolbar {
+  --background: transparent no-repeat fixed center;
+  --color: var(--ion-color-primary);
+  position: absolute;
+  top: 5px;
+}
+
+ion-content.transparent {
+  --background: transparent;
+  top: 60px;
+  height: 90%
+}
+
+.badge {
+  background-color: red;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+p{
+  margin-bottom: 0;
 }
