--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -287,16 +287,15 @@ ion-input {
   }
 }
 
-ion-select {
-  text-align: center;
+ion-select,
+ion-textarea {
+  width: 100%;
+  justify-content: center;
   font-size: 13px !important;
 }
 
-// ion-content {
-//   // overwrite inline styles
-//   --offset-bottom: auto !important;
-//   --overflow: hidden;
-//   overflow: auto;
-
-
-// }
+/* Set the flex in order to size the text width to its content */
+ion-select::part(placeholder),
+ion-select::part(text) {
+  flex: 0 0 auto;
+}
