--- a/src/app/core/global/alert/success/success.page.html
+++ b/src/app/core/global/alert/success/success.page.html
@@ -28,7 +28,7 @@
                 </ion-text>
               </ion-card-content>
             </ion-card>
-            <ion-button size="medium" mode="ios" (click)="closeModal()" expand="block" shape="round" color="light">
+            <ion-button size="medium" mode="ios" (click)="closeModal()" expand="block" shape="round" color="light" class="btn-custom">
               Seterusnya
             </ion-button>
           </ion-col>
