--- a/src/app/core/superadmin/profile/profile.page.html
+++ b/src/app/core/superadmin/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button defaultHref="/user/dashboard">
+      <ion-button href="/superadmin/dashboard">
         <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
