--- a/src/app/auth/forgot/forgot.page.html
+++ b/src/app/auth/forgot/forgot.page.html
@@ -1,38 +1,49 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-button href="/login">
+        <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
+      </ion-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+
+    <ion-title mode="ios">Lupa Kata Laluan</ion-title>
+
+    <!-- <ion-buttons slot="end">
+      <ion-button (click)="logout()">
+        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <form #form="ngForm" (ngSubmit)="reset(form)">
-      <ion-grid>
-        <ion-row color="primary" justify-content-center>
-          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-            <div text-center>
-              <h3>Set Semula Kata Laluan</h3>
-            </div>
-            <div padding>
-              <ion-item>
-                <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
-              </ion-item>
-            </div>
-            <div padding>
-              <ion-button size="medium" type="submit" [disabled]="form.invalid" expand="block">Hantar</ion-button>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </form>
+  <div id="container" class="background">
+    <ion-list>
+      <form #form="ngForm" (ngSubmit)="reset(form)">
+        <ion-grid>
+          <ion-row color="primary" justify-content-center>
+            <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+              <div text-center>
+              </div>
+              <div padding>
+                <ion-label>Alamat E-mel</ion-label>
+                <ion-item>
+                  <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
+                </ion-item>
+              </div>
+              <br>
+              <p style="font-size: 12px; " color="medium">*Kata Laluan baru akan dihantar ke e-mel anda. Sila semak dan ikut arahan seterusnya.</p>
+              <br>
+              <div padding>
+                <ion-button size="medium" type="submit" [disabled]="form.invalid" expand="block" shape="round">Hantar
+                </ion-button>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </form>
+    </ion-list>
   </div>
+
 </ion-content>
