--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -31,6 +31,7 @@ ion-item {
 
 ion-router-link {
   font-weight: bold;
+  font-size: small;
 }
 
 ion-button {
@@ -78,4 +79,10 @@ ion-item.item-inner {
 
 ion-col {
   --ion-grid-column-padding: 2px;
+}
+
+ion-label{
+  color: var(--ion-color-medium);
+  margin-left: 10px;
+  font-weight: 500;
 }
