--- a/src/app/core/superadmin/list/aduan-list/aduan-list.page.html
+++ b/src/app/core/superadmin/list/aduan-list/aduan-list.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/dashboard">
+      <ion-button href="/superadmin/dashboard">
         <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
