--- a/src/app/core/user/create/create-aduan/create-aduan.page.html
+++ b/src/app/core/user/create/create-aduan/create-aduan.page.html
@@ -28,19 +28,6 @@
           <ion-row color="primary" justify-content-center>
             <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
               <div padding>
-                <!-- <ion-item>
-                  <ion-label>Gambar Aduan</ion-label>
-                  <ion-grid>
-                    <ion-row>
-                      <ion-col size="6" *ngFor="let photo of photoService.photos; index as position">
-                        <ion-img [src]="photo.webviewPath"></ion-img>
-                      </ion-col>
-                    </ion-row>
-                  </ion-grid>
-                  <ion-button round (click)="addPhotoToGallery()" slot="end">
-                    <ion-icon name="camera"></ion-icon>
-                  </ion-button>
-                </ion-item> -->
                 <ion-item>
                   <ion-input formControlName="title" type="text" placeholder="Tajuk Aduan">
                   </ion-input>
@@ -49,11 +36,16 @@
                   <ion-textarea formControlName="detail" type="text" placeholder="Keterangan Aduan">
                   </ion-textarea>
                 </ion-item>
+                <ion-label>Gambar Aduan</ion-label>
+                <ion-item>
+                  <ion-input formControlName="image" type="file" (change)="fileEvent($event)" accept="image/*"></ion-input>
+                </ion-item>
               </div>
               <br>
               <div padding>
-                <ion-button color="success" size="medium" [disabled]="aduanForm.invalid" (click)="submitAduan()" expand="block">
-                 Seterusnya</ion-button>
+                <ion-button color="success" size="medium" [disabled]="aduanForm.invalid" (click)="submitAduan()"
+                  expand="block">
+                  Seterusnya</ion-button>
               </div>
             </ion-col>
           </ion-row>
