--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -1,9 +1,9 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button>
+      <ion-button href="/user/dashboard">
         <ion-icon slot="icon-only" name="chevron-back-outline"></ion-icon>
-      </ion-back-button>
+      </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button (click)="logout()">
