--- a/src/app/modal/aduan-detail/aduan-detail.page.html
+++ b/src/app/modal/aduan-detail/aduan-detail.page.html
@@ -13,23 +13,30 @@
   <div id="content" class="background">
     <div #map3 id="map3"></div>
   </div>
-  <!-- <img src="https://c8.alamy.com/comp/B3MXEK/broken-road-B3MXEK.jpg" alt="Picture"/> -->
+
   <div class="card-body">
-    <ion-text class="ion-text-center" color="light">
-      <h4>{{address}}</h4>
-    </ion-text>
-    <ion-item>
-      <ion-label position="stacked" color="primary">Keterangan Aduan :</ion-label>
-      <ion-textarea readonly value="{{aduan.detail}}">
-      </ion-textarea>
-    </ion-item>
-
-
-    <!-- <ion-button (click)="openEditModal()" expand="block" color="primary" shape="round">
-      Kemaskini
-    </ion-button> -->
-    <ion-button *ngIf="!isAdmin"  (click)="onDeleteAduan()" expand="block" color="danger" shape="round">
-      Hapus
-    </ion-button>
+    <ion-content class="content">
+      <div style="margin: 10px 30px;">
+        <ion-text class="ion-text-center" color="light">
+          <h4>{{address}}</h4>
+        </ion-text>
+        <ion-item>
+          <ion-label position="stacked" color="primary">Keterangan Aduan :</ion-label>
+          <ion-textarea readonly value="{{aduan.detail}}" rows="6">
+          </ion-textarea>
+        </ion-item>
+        <ion-thumbnail>
+            <img src="{{image}}"/>
+        </ion-thumbnail>
+        <br>
+        <!-- <ion-button (click)="openEditModal()" expand="block" color="primary" shape="round">
+          Kemaskini
+        </ion-button> -->
+        <ion-button *ngIf="!isAdmin" (click)="onDeleteAduan()" expand="block" color="danger" shape="round">
+          Hapus
+        </ion-button>
+        <br>
+      </div>
+    </ion-content>
   </div>
 </ion-content>
