--- a/src/app/modal/jalan-detail/jalan-detail.page.html
+++ b/src/app/modal/jalan-detail/jalan-detail.page.html
@@ -15,7 +15,7 @@
     <ion-list>
       <ion-card>
         <ion-card-header>
-          <img src="https://www.falconheights.org/home/showpublishedimage/802/637171079319470000" alt="">
+          <img src="{{image}}" alt="">
         </ion-card-header>
         <ion-card-content>
           <ion-card-title>{{jalan.name}}</ion-card-title>
