--- a/src/app/modal/aduan-detail/aduan-detail.page.html
+++ b/src/app/modal/aduan-detail/aduan-detail.page.html
@@ -32,9 +32,9 @@
         <!-- <ion-button (click)="openEditModal()" expand="block" color="primary" shape="round">
           Kemaskini
         </ion-button> -->
-        <ion-button *ngIf="!isAdmin" (click)="onDeleteAduan()" expand="block" color="danger" shape="round">
+        <!-- <ion-button *ngIf="!isAdmin" (click)="onDeleteAduan()" expand="block" color="danger" shape="round">
           Hapus
-        </ion-button>
+        </ion-button> -->
         <br>
       </div>
     </ion-content>
