--- a/src/app/core/global/info/info.page.html
+++ b/src/app/core/global/info/info.page.html
@@ -39,7 +39,7 @@
           </ion-card>
           <br>
           <div class="ion-text-center">
-            <ion-button mode="ios" href="/user/create-aduan">
+            <ion-button mode="ios" (click)="closeModal()" class="btn-custom">
               <ion-icon slot="start" name="create-outline"></ion-icon>
               Daftar Aduan
             </ion-button>
