--- a/src/app/core/user/create/create-aduan/create-aduan.page.scss
+++ b/src/app/core/user/create/create-aduan/create-aduan.page.scss
@@ -25,6 +25,9 @@ ion-toolbar {
   border-top-left-radius: 2.5rem;
   border-top-right-radius: 2.5rem;
 
+  img{
+    border-radius: 18px;
+  }
 }
 
 ion-button {
