--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -29,7 +29,7 @@
         <ion-label>Profil</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/info">
+      <ion-tab-button href="/user/create-aduan">
         <ion-icon name="receipt-outline"></ion-icon>
         <ion-label>Aduan</ion-label>
       </ion-tab-button>
