--- a/src/app/modal/aduan-detail/aduan-detail.page.scss
+++ b/src/app/modal/aduan-detail/aduan-detail.page.scss
@@ -27,7 +27,7 @@ ion-toolbar {
 }
 
 .background {
-  background: url(../../../assets/img/bg-login.png) no-repeat center/cover fixed;
+  background: url(../../../assets/img/bg-forgot.png) no-repeat center/cover fixed;
   z-index: -1;
   height: 100%;
   width: 100%;
