--- a/src/app/core/global/info/info.page.scss
+++ b/src/app/core/global/info/info.page.scss
@@ -14,7 +14,7 @@ ion-toolbar {
 }
 
 ion-card {
-  margin: 100px 10px 10px 10px;
+  margin: 90px 10px 10px 10px;
   border-radius: 10px;
 
 
@@ -24,7 +24,7 @@ ion-card {
 
 }
 
-ion-button {
+ion-button.btn-custom {
   --border-radius: 19px;
   width: 70%;
   margin: 30px 10px 30px;
