--- a/src/app/core/user/create/create-aduan/create-aduan.page.html
+++ b/src/app/core/user/create/create-aduan/create-aduan.page.html
@@ -38,14 +38,14 @@
                       <ion-textarea formControlName="detail" type="text" placeholder="Keterangan Aduan">
                       </ion-textarea>
                     </ion-item>
-                    <ion-label>Gambar Aduan</ion-label>
-                    <ion-item style="padding: 0;">
-                      <label>
-                        <img [src]="url" alt="">
-                        <ion-input style="display:none" formControlName="image" id="image" type="file"
-                          (change)="fileEvent($event)" accept="image/*"></ion-input>
-                      </label>
-                    </ion-item>
+                    <ion-text class="ion-text-center" color="light">
+                      <h4>{{address}}</h4>
+                    </ion-text>
+                    <label>
+                      <img [src]="url" alt="">
+                      <ion-input style="display:none" formControlName="image" id="image" type="file"
+                        (change)="fileEvent($event)" accept="image/*"></ion-input>
+                    </label>
                   </div>
                   <br>
                   <div padding>
