--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -37,6 +37,11 @@
             </div>
             <div class="input">
               <ion-item>
+                <ion-input formControlName="organisasi" placeholder="Nama Organisasi" type="text"></ion-input>
+              </ion-item>
+            </div>
+            <div class="input">
+              <ion-item>
                 <ion-select formControlName="doc_type" placeholder="Jenis Pengenalan" interface="action-sheet">
                   <ion-select-option value="NRIC">NRIC No</ion-select-option>
                   <ion-select-option value="PASS">Paspot No</ion-select-option>
@@ -57,12 +62,14 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="password" autocomplete="off"></ion-input>
+                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="password" autocomplete="off">
+                </ion-input>
               </ion-item>
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="confirmpassword" placeholder="Sah Kata Laluan" type="password" autocomplete="off"></ion-input>
+                <ion-input formControlName="confirmpassword" placeholder="Sah Kata Laluan" type="password"
+                  autocomplete="off"></ion-input>
               </ion-item>
             </div>
             <div *ngFor="let error of error_messages.confirmpassword">
