--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -12,9 +12,9 @@ ion-card {
 .background {
   background: url(../../../assets/img/bg-login.png) no-repeat center/cover fixed;
   z-index: -1;
-  height: 100%;
+  height: 130%;
   width: 100%;
-  position: absolute;
+  //position: absolute;
 }
 
 .login-title {
@@ -68,11 +68,11 @@ ion-item.item-inner {
 }
 
 .no-account {
-  margin: 0 auto;
+  //margin: 0 auto;
   text-align: center;
   width: 100%;
   bottom: 10px;
-  position: absolute;
+  position: fixed;
 }
 
 ion-col {
