--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -63,7 +63,7 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="password" autocomplte="off">
+                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="{{showPass ? 'password' : 'text' }}" autocomplte="off">
                 </ion-input>
               </ion-item>
             </div>
